--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "type": "module"
   },
+  "engines": {
+    "node": "14.4.0",
+    "npm": "6.14.5"
+  },
   "author": "Valentine Bassey",
   "license": "ISC",
   "dependencies": {
